--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="https://i.postimg.cc/02M3RZVj/icon-react.png" />
+  <meta property="og:image" content="https://i.postimg.cc/mrVw2QHz/Og-image.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
